--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="navbar">
     <div class="logo">Ashes Beneath the Leaves</div>
     <nav>
-        <a href="Game.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="gameplay.html">Gameplay</a>
         <a href="characters.html">Characters</a>
@@ -25,7 +25,7 @@
         <a href="accessibility.html">Accessibility</a>
         <a href="news.html">News</a>
         <a href="pricing.html">Pricing</a>
-        <a href="legal.html">Legala</a>
+        <a href="legal.html">Legal</a>
     </nav>
 </header>
 
