--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header class="navbar">
     <div class="logo">Ashes Beneath the Leaves</div>
-    <nav>
+    <nav class="nav-scroll">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="gameplay.html">Gameplay</a>
