--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="navbar">
     <div class="logo">Ashes Beneath the Leaves</div>
     <nav class="nav-scroll">
-        <a href="index.html">Home</a>
+        <a href="signin.html">Home</a>
         <a href="about.html">About</a>
         <a href="gameplay.html">Gameplay</a>
         <a href="characters.html">Characters</a>
@@ -30,10 +30,20 @@
 </header>
 
 <main>
-    <h1>Light is Born Through Suffering</h1>
-    <p>Journey as Lucen Ardyn through Elyndria’s silver forests and haunted citadels.</p>
-    <a class="btn" href="about.html">Enter the Realm</a>
+    <div class="hero">
+        <div class="text">
+            <h1>Light is Born Through Suffering</h1>
+            <p>Journey as Lucen Ardyn through Elyndria’s silver forests and haunted citadels.</p>
+            <a class="btn" href="about.html">Enter the Realm</a>
+        </div>
+        <div class="text">
+            <img id="map" src="Map.png" alt="">
+        </div>
+    </div>
+
 </main>
+
+
 
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
