--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header class="navbar">
     <div class="logo">Ashes Beneath the Leaves</div>
     <nav class="nav-scroll">
-        <a href="signin.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="signin.html">Log</a>
+        <a href="login.html">Sign</a>
         <a href="gameplay.html">Gameplay</a>
         <a href="characters.html">Characters</a>
         <a href="media.html">Media</a>
@@ -34,7 +34,7 @@
         <div class="text">
             <h1>Light is Born Through Suffering</h1>
             <p>Journey as Lucen Ardyn through Elyndria’s silver forests and haunted citadels.</p>
-            <a class="btn" href="about.html">Enter the Realm</a>
+            <a class="btn" href="signin.html">Enter the Realm</a>
         </div>
         <div class="text">
             <img id="map" src="Map.png" alt="">
