--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     </div>
 
 </main>
-
-
-
+<div class="cards">What Awaits You</div>
+<article class="card">ojdfosjfs</article>
+<article class="card">ojdfosjfs</article>
+<article class="card">ojdfosjfs</article>
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
