--- a/login.html
+++ b/login.html
@@ -9,8 +9,7 @@
 <body>
 
 <div class="auth-container">
-    <h2>Login</h2>
-    <form>
+    <h2>Create a Account</h2>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
         <button class="auth-btn">Login</button>
