--- a/signin.html
+++ b/signin.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="auth-container">
-    <h2>Create Account</h2>
+    <h2>Log in</h2>
     <form>
         <input type="text" placeholder="Username" required>
         <input type="email" placeholder="Email" required>
@@ -18,7 +18,7 @@
     </form>
 
     <p class="switch">Already have an account?
-        <a href="login.html">Login</a>
+        <a href="signin.html">Login</a>
     </p>
 </div>
 
