log and sign finished

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashes Beneath the Leaves — Home</title>
-    <link rel="stylesheet" href="Game.css">
+    <link rel="stylesheet" href="css/Game.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
         <div class="text">
             <h1>Light is Born Through Suffering</h1>
             <p>Journey as Lucen Ardyn through Elyndria’s silver forests and haunted citadels.</p>
-            <a class="btn" href="signin.html">Enter the Realm</a>
+            <a class="btn" href="log.html">Enter the Realm</a>
         </div>
         <div class="text">
             <img id="map" src="Map.png" alt="">
