--- a/log.html
+++ b/log.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login — Ashes Beneath the Leaves</title>
-    <link rel="stylesheet" href="signin.css">
+    <title>Log in — Ashes Beneath the Leaves</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
 <div class="auth-container">
-    <h2>Create a Account</h2>
+    <h2>Log in</h2>
+    <form>
+        <input type="text" placeholder="Username" required>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <button class="auth-btn">Login</button>
+        <button class="auth-btn">Log in</button>
     </form>
 
     <p class="switch">Don't have an account?
-        <a href="signup.html">Sign Up</a>
+        <a href="signin.html">Sign up</a>
     </p>
 </div>
 
