--- a/signin.html
+++ b/signin.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up — Ashes Beneath the Leaves</title>
-    <link rel="stylesheet" href="signin.css">
+    <title>Login — Ashes Beneath the Leaves</title>
+    <link rel="stylesheet" href="css/signin.css">
 </head>
 <body>
 
 <div class="auth-container">
-    <h2>Log in</h2>
-    <form>
-        <input type="text" placeholder="Username" required>
+    <h2>Create a Account</h2>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <button class="auth-btn">Sign Up</button>
+        <button class="auth-btn">Sign up</button>
     </form>
 
-    <p class="switch">Already have an account?
-        <a href="signin.html">Login</a>
+    <p class="switch">Don't have an account?
+        <a href="log.html">Login</a>
     </p>
 </div>
 
