about game added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="navbar">
     <div class="logo">Ashes Beneath the Leaves</div>
     <nav class="nav-scroll">
-        <a href="gameplay.html">Gameplay</a>
+        <a href="about%20game.html">About</a>
         <a href="characters.html">Characters</a>
         <a href="media.html">Media</a>
         <a href="community.html">Community</a>
@@ -35,15 +35,17 @@
             <a class="btn" href="log.html">Enter the Realm</a>
         </div>
         <div class="text">
-            <img id="map" src="Map.png" alt="">
+            <img id="map" src="images/Map.png" alt="">
         </div>
     </div>
 
 </main>
 <div class="cards">What Awaits You</div>
-<article class="card">ojdfosjfs</article>
-<article class="card">ojdfosjfs</article>
-<article class="card">ojdfosjfs</article>
+<div class="card">
+<article>ojdfosjfs</article>
+<article>ojdfosjfs</article>
+<article>ojdfosjfs</article>
+</div>
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
