--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </main>
 <div class="cards">What Awaits You</div>
 <div class="card">
-<article>ojdfosjfs</article>
-<article>ojdfosjfs</article>
-<article>ojdfosjfs</article>
+<article>What awaits you isn’t just another path, but a threshold. The moment you cross it, the familiar fades, and you’re pulled into a world where intuition guides you more than certainty.</article>
+<article>Shadows hint at truths long hidden, and every choice sends ripples through the unknown. What awaits you is not simply a place—it’s a transformation .</article>
+<article>And when the journey reveals its core, you’ll understand that what lies ahead was never meant to be feared, but uncovered. What awaits you is the stronger, clearer version of yourself.</article>
 </div>
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
