download added and background images changed for home and signin and login

--- a/about game.html
+++ b/about game.html
@@ -13,19 +13,25 @@
 <body>
 
 <div class="about-wrapper">
-    <h1 class="about-title">About the Game</h1>
+    <h1 class="about-title">ABOUT THE GAME</h1>
 
     <div class="about-box">
 
         <div class="about-image-row">
-            <img src="css/Map.png" alt="" class="about-img">
-            <img src="tree.png" alt="" class="about-img">
+            <img src="images/Map.png" alt="" class="about-img">
         </div>
 
         <p class="about-text">
-            Ashes Beneath the Leaves is a dark fantasy adventure set in Elyndria,
-            a land shaped by forgotten gods and fading magic. You play as Lucen Ardyn,
-            a wanderer bound to an ancient ember that slowly awakens dormant shadows across the realm.
+            In a world where the gods have fallen silent, Elyndria stands on the edge of collapse.
+            Whispers tell of an ember — a relic left behind by the last guardian deity — capable of reigniting the world’s fading light.
+            That ember now rests in the hands of Lucen Ardyn, a wanderer haunted by visions of forests turning to ash and stars dimming in the sky.
+        </p>
+        <p class="about-text">
+            Journey across shimmering groves, forgotten kingdoms, and shadow-soaked wastelands.
+            Unravel the histories of beings long erased and confront forces that feed on Elyndria’s weakening spirit.
+            Every step uncovers forgotten truths, and every choice pushes the realm closer to salvation… or oblivion.
+        </p>
+            Here, beneath the leaves, the final embers of hope wait for someone brave enough to ignite them.
         </p>
 
         <p class="about-text">
