--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
 <header class="navbar">
-    <div class="logo">Ashes Beneath the Leaves</div>
+    <img src="../images/logo.png" class="nav-logo">
     <nav class="nav-scroll">
         <a href="about%20game.html">About</a>
+        <a href="download.html">Download</a>
         <a href="characters.html">Characters</a>
         <a href="media.html">Media</a>
-        <a href="community.html">Community</a>
         <a href="contact.html">Contact</a>
         <a href="press.html">Press</a>
         <a href="accessibility.html">Accessibility</a>
