--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <header class="navbar">
-    <img src="../images/logo.png" class="nav-logo">
+    <img src="images/logo.png" class="nav-logo">
     <nav class="nav-scroll">
         <a href="about%20game.html">About</a>
         <a href="download.html">Download</a>
