--- a/index.html
+++ b/index.html
@@ -38,14 +38,46 @@
             <img id="map" src="images/Map.png" alt="">
         </div>
     </div>
-
 </main>
-<div class="cards">What Awaits You</div>
-<div class="card">
-<article>What awaits you isn’t just another path, but a threshold. The moment you cross it, the familiar fades, and you’re pulled into a world where intuition guides you more than certainty.</article>
-<article>Shadows hint at truths long hidden, and every choice sends ripples through the unknown. What awaits you is not simply a place—it’s a transformation .</article>
-<article>And when the journey reveals its core, you’ll understand that what lies ahead was never meant to be feared, but uncovered. What awaits you is the stronger, clearer version of yourself.</article>
-</div>
+<section class="lore-intro">
+    <div class="lore-box">
+        <h2 class="lore-title">A World Fading Into Shadows</h2>
+        <p>
+            Elyndria was once a land guided by ancient spirits, but their silence has allowed
+            darkness to grow. As the final emberbearer, your journey shapes the destiny of
+            a world caught between memory and oblivion.
+        </p>
+    </div>
+</section>
+
+<section class="feature-section">
+    <h2 class="cards">What Awaits You</h2>
+
+    <div class="feature-row">
+
+        <div class="feature-card">
+            <h3>The Threshold</h3>
+            <p>
+                Your journey begins at the edge of the known world, where choices shape destiny.
+            </p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Hidden Truths</h3>
+            <p>
+                Shadows whisper forgotten memories, revealing the past one fragment at a time.
+            </p>
+        </div>
+
+        <div class="feature-card">
+            <h3>Becoming</h3>
+            <p>
+                Through trials and discovery, you grow into what the world needs most.
+            </p>
+        </div>
+
+    </div>
+</section>
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
