privacy policy and end links added

--- a/about game.html
+++ b/about game.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+<header class="navbar">
+    <img src="images/logo.png" class="nav-logo" alt="Game Logo">
+    <div class="title">About The Game</div>
+</header>
 
 <div class="about-wrapper">
     <h1 class="about-title">ABOUT THE GAME</h1>
