--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav class="nav-scroll">
         <a href="about%20game.html">About</a>
         <a href="download.html">Download</a>
+        <a href="legal.html">Legal</a>
         <a href="characters.html">Characters</a>
         <a href="media.html">Media</a>
         <a href="contact.html">Contact</a>
@@ -23,7 +24,6 @@
         <a href="accessibility.html">Accessibility</a>
         <a href="news.html">News</a>
         <a href="pricing.html">Pricing</a>
-        <a href="legal.html">Legal</a>
     </nav>
 </header>
 
@@ -78,6 +78,16 @@
 
     </div>
 </section>
+<section class="social-bar">
+    <h3>Follow Us</h3>
+
+    <div class="social-links">
+        <a href="#" class="social-icon youtube">YouTube</a>
+        <a href="#" class="social-icon insta">Instagram</a>
+        <a href="#" class="social-icon twitter">Twitter</a>
+    </div>
+</section>
+
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
