--- a/download.html
+++ b/download.html
@@ -15,35 +15,35 @@
     <div class="download-cards">
 
         <div class="download-card">
-            <img src="../images/Windows.png" class="card-img" alt="">
+            <img src="/images/Windows.png" class="card-img" alt="">
             <h2>Windows</h2>
             <p>Best performance • 64-bit</p>
             <a href="#" class="download-btn">$19.99</a>
         </div>
 
         <div class="download-card">
-            <img src="../images/Mac.png" class="card-img" alt="">
+            <img src="/images/Mac.png" class="card-img" alt="">
             <h2>MacOS</h2>
             <p>Optimized for M-series chips</p>
             <a href="#" class="download-btn">$19.99</a>
         </div>
 
         <div class="download-card">
-            <img src="../images/Linux.png" class="card-img" alt="">
+            <img src="/images/Linux.png" class="card-img" alt="">
             <h2>Linux/Ubuntu</h2>
             <p>Play on the go</p>
             <a href="#" class="download-btn">$9.9</a>
         </div>
 
         <div class="download-card">
-            <img src="../images/PS5.png" class="card-img" alt="">
+            <img src="/images/PS5.png" class="card-img" alt="">
             <h2>PS5</h2>
             <p>Now on Big Screens</p>
             <a href="#" class="download-btn">$22.99</a>
         </div>
 
         <div class="download-card">
-            <img src="../images/Xbox.png" class="card-img" alt="">
+            <img src="/images/Xbox.png" class="card-img" alt="">
             <h2>Xbox</h2>
             <p>For Microsoft</p>
             <a href="#" class="download-btn">$22.99</a>
