--- a/log.html
+++ b/log.html
@@ -17,7 +17,7 @@
         <input type="text" placeholder="Username" required>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <button class="auth-btn">Log in</button>
+        <button class="Log">Log in</button>
     </form>
 
     <p class="switch">Don't have an account?
