added new text size

--- a/download.html
+++ b/download.html
@@ -9,11 +9,9 @@
 
 <body>
 
-<div class="download-wrapper">
+<div class="download">
     <h1 class="download-title">Download the Game</h1>
-
     <div class="download-cards">
-
         <div class="download-card">
             <img src="/images/Windows.png" class="card-img" alt="">
             <h2>Windows</h2>
