--- a/legal.html
+++ b/legal.html
@@ -17,7 +17,7 @@
 
 <section class="policy-container">
 
-    <h1>Privacy Policy</h1>
+    <h1><center>Privacy Policy</center></h1>
     <p class="update">Last Updated: January 2025</p>
 
     <p>Welcome to <strong>Ashes Beneath the Leaves</strong>. Your privacy matters to us. This Privacy Policy explains how we collect, store, and use your information when you use our website or play our game.</p>
