--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
     <h3>Follow Us</h3>
 
     <div class="social-links">
-        <a href="#" class="social-icon youtube">YouTube</a>
-        <a href="#" class="social-icon insta">Instagram</a>
-        <a href="#" class="social-icon twitter">Twitter</a>
+        <a href="#" class="icon youtube">YouTube</a>
+        <a href="#" class="icon insta">Instagram</a>
+        <a href="#" class="icon twitter">Twitter</a>
     </div>
 </section>
-
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
