pages links and map

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         </div>
         <div class="text">
             <img id="map" src="images/Map.png" alt="">
-        </div>
     </div>
 </main>
 <section class="lore-intro">
@@ -80,7 +79,7 @@
     <div class="social-links">
         <a href="#" class="icon youtube">YouTube</a>
         <a href="#" class="icon insta">Instagram</a>
-        <a href="#" class="icon twitter">Twitter</a>
+        <a href="#" class="icon X">X</a>
     </div>
 </section>
 <footer>
