--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body>
 
 <header class="navbar">
-    <img src="images/logo.png" class="nav-logo">
+    <img src="images/logo.png" class="nav-logo" alt="logo">
     <nav class="nav-scroll">
         <a href="about%20game.html">About</a>
         <a href="download.html">Download</a>
         <a href="legal.html">Legal</a>
-        <a href="characters.html">Characters</a>
-        <a href="media.html">Media</a>
-        <a href="contact.html">Contact</a>
+        <a href="news-com.html">Media</a>
     </nav>
 </header>
 
@@ -32,6 +30,7 @@
         </div>
         <div class="text">
             <img id="map" src="images/Map.png" alt="">
+        </div>
     </div>
 </main>
 <section class="lore-intro">
