--- a/news-com.html
+++ b/news-com.html
@@ -17,6 +17,20 @@
             <p> Can’t wait for the new locations!</p>
         </div>
     </section>
-
+    <section class="container">
+        <h2 class="section-title">Latest News</h2>
+        <div class="news-box">
+            <h3>📢 Development Update — Chapter 1 Complete</h3>
+            <p>The first chapter is now fully polished…</p>
+        </div>
+        <div class="news-box">
+            <h3>🔥 New Creature Concept Released</h3>
+            <p>Meet “The Hollow Warden”, a spectral guardian…</p>
+        </div>
+        <div class="news-box">
+            <h3>🛠 Gameplay Improvements</h3>
+            <p>Smoother combat, better lighting, and more…</p>
+        </div>
+    </section>
 </body>
 </html>
