--- a/news-com.html
+++ b/news-com.html
@@ -12,9 +12,9 @@
         <h2 class="section-title">Community</h2>
         <textarea class="community-input" placeholder="Share your thoughts..."></textarea>
         <div class="comments-box">
-            <p> Really excited for the game update!</p>
-            <p> The artwork for Hollow Warden looks amazing 🔥</p>
-            <p> Can’t wait for the new locations!</p>
+            <p class="comments-box"> Really excited for the game update!</p>
+            <p class="comments-box"> The artwork for Hollow Warden looks amazing 🔥</p>
+            <p class="comments-box"> Can’t wait for the new locations!</p>
         </div>
     </section>
     <section class="container">
@@ -33,4 +33,5 @@
         </div>
     </section>
 </body>
+<script src="js/com.js"></script>
 </html>
