--- a/signin.html
+++ b/signin.html
@@ -8,14 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap" rel="stylesheet">
+    <script src="js/back.js"></script>
 </head>
 <body>
 
 <div class="auth-container">
-    <h2>Create a Account</h2>
+    <form>
+    <h2>Create an Account</h2>
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <button class="auth-btn">Sign up</button>
+        <button class="sign" id="backsign" onclick="home()">Sign up</button>
     </form>
 
     <p class="switch">Don't have an account?
@@ -24,4 +26,5 @@
 </div>
 
 </body>
+<script src="js/back.js"></script>
 </html>
