inkdein and footer links added

--- a/index.html
+++ b/index.html
@@ -79,10 +79,17 @@
         <a href="#" class="icon youtube">YouTube</a>
         <a href="#" class="icon insta">Instagram</a>
         <a href="#" class="icon X">X</a>
+        <a href="#" class="icon Linkedin">Linkedin</a>
     </div>
 </section>
 <footer>
     <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
+    <div class="footer-links">
+        <a href="about%20game.html">About</a>
+        <a href="download.html">Download</a>
+        <a href="legal.html">Legal</a>
+        <a href="news-com.html">Media</a>
+    </div>
 </footer>
 
 </body>
