--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<section class="main_container">
 <header class="navbar">
     <img src="images/logo.png" class="nav-logo" alt="logo">
     <nav class="nav-scroll">
@@ -83,14 +83,14 @@
     </div>
 </section>
 <footer>
-    <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
-    <div class="footer-links">
+    <div class="footer-pic footer-links">
         <a href="about%20game.html">About</a>
         <a href="download.html">Download</a>
         <a href="legal.html">Legal</a>
         <a href="news-com.html">Media</a>
     </div>
+    <p>© 2025 Ashes Beneath the Leaves Studios — All Rights Reserved.</p>
 </footer>
-
+    </section>
 </body>
 </html>
